--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <div id="topText" class=" h-1/7 w-full flex justify-center items-center font-bold text-[20px]">Nidhi</div>
                 <div class="center-layer h-5/7 w-full">
                     <div class="flex justify-center items-center w-full h-full layer1 relative">
-                        <img class="h-full rounded-[20px] absolute z-20" src="./assets/1.jpg" alt="">
+                        <img class="h-full rounded-[20px] absolute z-20" src="https://images.unsplash.com/photo-1529522210435-26cb9e92a33d?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTR8fGJvb2slMjBxdW90ZXxlbnwwfDB8MHx8fDA%3D" alt="">
                     </div>
                 </div>
                 <div class="bottom h-1/7 flex justify-center items-center">
