--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body class="w-full h-[100vh] flex justify-center items-center bg-black">
+    <div class="song"></div>
         <div class="outer-stack bg-white h-[34rem] w-[34rem] rounded-lg flex justify-center items-center flex-col gap-2 p-2">
                 <div id="topText" class=" h-1/7 w-full flex justify-center items-center font-bold text-[20px]">Nidhi</div>
                 <div class="center-layer h-5/7 w-full">
